# MeritAI

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  Makefile  Productize.py  README.md  app.py  nixpacks.toml  pyproject.toml  railway.toml
.github/workflows/: ci.yml
.streamlit/: config.toml
backend/: __init__.py  auth.py  byok.py  main.py  quotas.py  venues.py
backend/routers/: __init__.py  account.py  (+8 more)
data/: arxiv_seed.json  cfp_seed.json  demo_cache.json  scholar_seed.json
migrations/: 0002_add_user_id.sql  0003_add_o1_evidence.sql
pages/: Market.py  Outreach.py  Track.py
paperpilot/: arxiv_lookup.py  auth.py  cfp_match.py  clickhouse_client.py  draft.py  embed.py  gateway.py  github_ingest.py  latex_export.py  llm_ingest.py  llm_ping.py  nimble_client.py  pipeline.py  redaction.py  senso_client.py  skill_extract.py  skill_render.py  supabase_client.py  trace.py  ui.py
scripts/: demo_precompute.py  fetch_arxiv.py  meta_flex.py  migrate_clickhouse_to_supabase.py  railway_env_setup.sh  railway_start.sh  refresh_cfp_corpus.py  run_migrations.py  seed_clickhouse.py  seed_outreach.py  seed_senso.py  verify_cascade_delete.py  verify_two_user_isolation.py
submission/: demo_script.md  linkedin_post.md  paperpilot.tex  references.bib  summary.json
supabase/: config.toml
tests/: test_auth_fallback.py  test_byok.py  test_byok_routes.py  test_cost_query.py  test_key_never_logged.py  test_seed_data.py  test_supabase_client_tenancy.py  test_trace_ledger.py
web/: package-lock.json  package.json  playwright.config.ts  proxy.ts
(+84 files in other folders)
