[project]
name = "agentichack"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.104.1",
    "arxiv>=4.0.0",
    "clickhouse-connect>=1.0.1",
    "ddtrace>=4.8.7",
    "google-genai>=2.6.0",
    "openai>=2.38.0",
    "pydantic>=2.13.4",
    "pygithub>=2.9.1",
    "python-dotenv>=1.2.2",
    "streamlit>=1.57.0",
    "tiktoken>=0.13.0",
    "requests>=2.32.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "responses>=0.25.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
